--- a/demo_usm_entropy.ipynb
+++ b/demo_usm_entropy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b2d8bd84",
+   "id": "409a3f81",
    "metadata": {},
    "source": [
     "# Demo of USM Renyi Entropy in Python\n",
@@ -17,12 +17,13 @@
     "    - [Section 1.1](#Section1.1) Renyi Continuous Entropy\n",
     "    - [Section 1.2](#Section1.2) Parzen Window Kernel Density Estimation\n",
     "    - [Section 1.3](#Section1.3) Equation of *d*-dimensional Renyi Entropy of USM\n",
+    "    - [Section 1.4](#Section1.4) \n",
     "* [Section 2](#Section2) Demo of usm_entropy module"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0c49c59f",
+   "id": "cf422ab4",
    "metadata": {},
    "source": [
     "<a id='Intro'></a>\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9dc9335",
+   "id": "bfe7457d",
    "metadata": {},
    "source": [
     "<a id='termintro'></a>\n",
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b420a70b",
+   "id": "b9196ce6",
    "metadata": {},
    "source": [
     "<a id='Section1'></a>\n",
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4003ef40",
+   "id": "8b9efe68",
    "metadata": {},
    "source": [
     "<a id='Section3.1'></a>\n",
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e293521",
+   "id": "df55309a",
    "metadata": {
     "tags": [
      "remove_cell"
@@ -111,7 +112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0c44f4b",
+   "id": "cdb2cfa1",
    "metadata": {},
    "source": [
     "<a id='Section1.2'></a>\n",
@@ -145,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4414bbf",
+   "id": "2195aeea",
    "metadata": {},
    "source": [
     "<a id='Section1.3'></a>\n",
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0dbfd3e",
+   "id": "a8c3b915",
    "metadata": {},
    "source": [
     "Because we are using a fixed kernel volume approach, $\\sigma^2$ is held constant across all kernels in the equation and so we can further simplify $\\sigma^2I_d + \\sigma^2I_d$ to $2\\sigma^2I_d$. Then the following terms become:  \n",
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "479e26ed",
+   "id": "33e0640c",
    "metadata": {
     "tags": [
      "remove_cell"
@@ -242,12 +243,32 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f040790f",
+   "id": "3f5b99ac",
    "metadata": {},
    "source": [
-    "<a id='Section3.4'></a>\n",
-    "### 3.4 Simplification for Python Implementation\n",
+    "<a id='Section1.4'></a>\n",
+    "### 1.4 Asymptotes of Renyi Function\n",
+    "In addition to the "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a76f46d",
+   "metadata": {},
+   "source": [
+    "<a id='Section4'></a>\n",
+    "# Section 2 Demo of usm_entropy module\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16fecc45",
+   "metadata": {},
+   "source": [
+    "<a id='Section2.1'></a>\n",
+    "### 2.1 Simplification of Entropy Equation for Python Implementation\n",
     "\n",
+    "In the implementation of [Eq. 1.3.1](#Eq1.3.1) in the function usm_entropy.renyi2usm() we utilize the function pdist() from the module scipy.spatial.distance which calculates the pairwise distance between  \n",
     "Moving the constants outside of the summation and we can then simplify even further due to the fact that all the pairwise distances of the form $d_{ii} = 0$ and therefore $\\sum_{\\substack{i=j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2} \\cdot \\ 0\\right)} = N$ and the fact that for the remainder of the pairwise distances, $d_{ij} = d_{ji}$, and so the sum of the pairwise distances where $i \\neq j$ can be obtained by $2 \\cdot \\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}$.\n",
     "\n",
     "Finally we obtain the equation for Renyi entropy of a *d*-dimensional USM of *N* sample coordinates where $d_ij$ is the squared Euclidean distance between sample USM coordinates $a_i$ and $a_j$:  \n",
@@ -258,18 +279,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ef1c954e",
-   "metadata": {},
-   "source": [
-    "<a id='Section4'></a>\n",
-    "# Demo of usm_entropy module\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0c78567",
+   "id": "b0ff5910",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a04da90",
+   "id": "87e577bf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af84306",
+   "id": "ede7474c",
    "metadata": {},
    "source": [
     "## References\n",
