--- a/demo_usm_entropy.ipynb
+++ b/demo_usm_entropy.ipynb
@@ -17,8 +17,8 @@
     "    - [Section 1.1](#Section1.1) Renyi Continuous Entropy\n",
     "    - [Section 1.2](#Section1.2) Parzen Window Kernel Density Estimation\n",
     "    - [Section 1.3](#Section1.3) Equation of *d*-dimensional Renyi Entropy of USM\n",
-    "    - [Section 1.4](#Section1.4) \n",
-    "* [Section 2](#Section2) Demo of usm_entropy module"
+    "* [Section 2](#Section2) \n",
+    "* [Section 3](#Section3) Demo of usm_entropy module"
    ]
   },
   {
@@ -246,9 +246,73 @@
    "id": "3f5b99ac",
    "metadata": {},
    "source": [
-    "<a id='Section1.4'></a>\n",
-    "### 1.4 Asymptotes of Renyi Function\n",
-    "In addition to the "
+    "<a id='Section2'></a>\n",
+    "# Section 2 Asymptotic Behavior of Renyi Entropy by Natural Log of Kernel Variance\n",
+    "In the original paper, Vinga and Almeida [3](#3) explore the dependence relationship between the entropy measure and the kernel variance, $\\sigma^2$, with the graph of the function $H_2 = H_2(ln\\sigma^2)$ and prove this graph has two linear asymptotes of the forms $H_2 = \\lim_{ln\\sigma^2 \\to +\\infty} H_2(ln\\sigma^2) = m ln\\sigma^2 + b$ and $H_2 = \\lim_{ln\\sigma^2 \\to -\\infty} H_2(ln\\sigma^2) = m' ln\\sigma^2 + b'$. Below are proofs of the equations of these asymptotes for the d-dimensional USM. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d95607b4",
+   "metadata": {},
+   "source": [
+    "<a id='Section2.1'></a>\n",
+    "### 2.1 Asymptote for $\\ln\\sigma^2 \\to +\\infty$\n",
+    "We solve for the coefficients, $m$ and $b$, of the asymptote for $ln\\sigma^2 \\to +\\infty$ using the equations given by Vinga and Almeida [3](#3) $m = \\lim_{\\sigma^2 \\to +\\infty} \\frac{H_2(\\sigma^2)}{\\ln\\sigma^2}$ and $b = \\lim_{\\sigma^2 \\to +\\infty} (H_2(\\sigma^2) - m \\ln \\sigma^2)$. \n",
+    "\n",
+    "We begin with $m$ and substitute [Eq. 1.3.1](#Eq1.3.1) for $H_2(\\sigma^2)$ in the formula. We then simplify the equation by distributing the exponent *d* in the numerator, splitting the numerator into a sum of three log terms per the product rule, then distributing the negative term across the summation, and transforming the negative log of the fractions into the log of the reciprocals per the rule of cologarithms. \n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "m & = \\lim_{\\sigma^2 \\to +\\infty} \\frac{-\\ln\\frac{1}{N^2}\\sum_{i=1}^{N}\\sum_{j=1}^{N}\\frac{1}{(2\\pi^{1/2}\\sigma)^d}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}}{\\ln\\sigma^2} \\\\\n",
+    "& = \\lim_{\\sigma^2 \\to +\\infty} \\frac{-\\ln\\frac{1}{N^22^d\\pi^{d/2}\\sigma^d}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}}{\\ln\\sigma^2} \\\\\n",
+    "& = \\lim_{\\sigma^2 \\to +\\infty} \\frac{-\\ln\\frac{1}{N^22^d\\pi^{d/2}} -\\ln\\frac{1}{\\sigma^d} - \\ln\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}}{\\ln\\sigma^2} \\\\\n",
+    "& = \\lim_{\\sigma^2 \\to +\\infty} \\frac{\\ln(N^22^d\\pi^{d/2}) + \\ln\\sigma^d - \\ln\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}}{\\ln\\sigma^2} \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "From there we can split the larger fraction into a sum of three fractions with common denominator $\\ln\\sigma^2$ and by dealing with each individually we get,\n",
+    "<a id='Eq2.1.1'></a>\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "m & = \\lim_{\\sigma^2 \\to +\\infty} \\frac{\\ln(N^22^d\\pi^{d/2})}{\\ln\\sigma^2} + \\frac{\\ln\\sigma^d}{\\ln\\sigma^2} - \\frac{\\ln\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}}{\\ln\\sigma^2} \\\\\n",
+    "& = \\frac{d\\ln\\sigma}{2\\ln\\sigma} - \\lim_{\\sigma^2 \\to +\\infty} \\frac{\\ln\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}}{\\ln\\sigma^2} \\\\\n",
+    "& =  \\frac{d}{2} - \\lim_{\\sigma^2 \\to +\\infty}\\frac{\\ln N^2}{\\ln\\sigma^2} \\\\\n",
+    "& =  \\frac{d}{2} \n",
+    "\\end{align}\n",
+    "\\tag{2.1.1}\n",
+    "$$\n",
+    "\n",
+    "since the limit of the first fraction as $\\sigma^2 \\to +\\infty$ is 0, as the numerator remains constant while the denominator grows infinitely. The second fraction is simplified to $d/2$ per the power rule and becomes a constant independent of $\\sigma^2$. The limit of the final fraction is also 0 since $\\lim_{\\sigma^2 \\to +\\infty} e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} = 1$ and $\\sum_{i=1}^{N}\\sum_{j=1}^{N}1 = N^2$, making the numerator independent of $\\sigma^2$ while the denominator tends toward infinity.\n",
+    "\n",
+    "\n",
+    "And doing the same for $b$ we get \n",
+    "<a id='Eq2.1.2'></a>\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "b &= \\lim_{\\sigma^2 \\to +\\infty} -\\ln\\frac{1}{N^22^d\\pi^{d/2}\\sigma^d}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} - \\frac{d}{2}\\ln\\sigma^2 \\\\\n",
+    "&= \\lim_{\\sigma^2 \\to +\\infty} -1\\left(\\ln\\frac{1}{N^22^d\\pi^{d/2}\\sigma^d}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} + \\ln\\sigma^d\\right)\\\\\n",
+    "&= \\lim_{\\sigma^2 \\to +\\infty} -1\\left(\\ln\\frac{\\sigma^d}{N^22^d\\pi^{d/2}\\sigma^d}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right)\\\\\n",
+    "&= \\lim_{\\sigma^2 \\to +\\infty} -1\\left(\\ln\\frac{\\sigma^d}{2^d\\pi^{d/2}\\sigma^d} + \\ln\\frac{1}{N^2}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right)\\\\\n",
+    "&= \\lim_{\\sigma^2 \\to +\\infty} -\\ln\\frac{1}{2^d\\pi^{d/2}} - \\ln\\frac{1}{N^2}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} \\\\\n",
+    "&= \\lim_{\\sigma^2 \\to +\\infty} \\ln2^d\\pi^{d/2} - \\ln\\frac{N^2}{N^2} \\\\\n",
+    "&= \\lim_{\\sigma^2 \\to +\\infty} \\ln(2\\pi^{1/2})^d \\\\\n",
+    "\\end{align}\n",
+    "\\tag{2.1.2}\n",
+    "$$\n",
+    "\n",
+    "since the $\\lim_{\\sigma^2 \\to +\\infty} e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} = 1$, $\\sum_{i=1}^{N}\\sum_{j=1}^{N}1 = N^2$, and the log1 is zero.\n",
+    "\n",
+    "Therefore we determine the equation of the linear asymptote of $H_2 =  H_2(ln\\sigma^2)$ as $\\ln\\sigma^2 \\to +\\infty$ as\n",
+    "<a id='Eq2.1.3'></a>\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "H_2^+ & = \\frac{d}{2}\\ln\\sigma^2 + \\ln(2\\pi^{\\frac{1}{2}})^d \\\\\n",
+    "& = d\\ln\\sigma + d\\ln2\\pi^{\\frac{1}{2}} \\\\\n",
+    "& = d\\left(\\ln\\sigma + \\ln2\\pi^{\\frac{1}{2}}\\right) \\\\\n",
+    "& = d\\left(\\ln\\sigma2\\pi^{\\frac{1}{2}}\\right) \\\\\n",
+    "\\end{align}\n",
+    "\\tag{2.1.2}\n",
+    "$$"
    ]
   },
   {
@@ -256,8 +320,8 @@
    "id": "3a76f46d",
    "metadata": {},
    "source": [
-    "<a id='Section4'></a>\n",
-    "# Section 2 Demo of usm_entropy module\n"
+    "<a id='Section3'></a>\n",
+    "# Section 3 Demo of usm_entropy module\n"
    ]
   },
   {
@@ -265,16 +329,17 @@
    "id": "16fecc45",
    "metadata": {},
    "source": [
-    "<a id='Section2.1'></a>\n",
-    "### 2.1 Simplification of Entropy Equation for Python Implementation\n",
+    "<a id='Section3.1'></a>\n",
+    "### 3.1 Simplification of Entropy Equation for Python Implementation\n",
     "\n",
     "In the implementation of [Eq. 1.3.1](#Eq1.3.1) in the function usm_entropy.renyi2usm() we utilize the function pdist() from the module scipy.spatial.distance which calculates the pairwise distance between  \n",
     "Moving the constants outside of the summation and we can then simplify even further due to the fact that all the pairwise distances of the form $d_{ii} = 0$ and therefore $\\sum_{\\substack{i=j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2} \\cdot \\ 0\\right)} = N$ and the fact that for the remainder of the pairwise distances, $d_{ij} = d_{ji}$, and so the sum of the pairwise distances where $i \\neq j$ can be obtained by $2 \\cdot \\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}$.\n",
     "\n",
     "Finally we obtain the equation for Renyi entropy of a *d*-dimensional USM of *N* sample coordinates where $d_ij$ is the squared Euclidean distance between sample USM coordinates $a_i$ and $a_j$:  \n",
-    "\n",
+    "<a id='Eq3.1.1'></a>\n",
     "$$\n",
     "H_2(USM) = -\\ln\\frac{1}{N^2(2\\pi^{1/2}\\sigma)^d}\\times\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right]\n",
+    "\\tag{3.1.1}\n",
     "$$\n"
    ]
   },
