finish asymptote proofs
Finished the narrative proofs of the graph asymptotes for H2 = H2(ln(sigsquared))

--- a/demo_usm_entropy.ipynb
+++ b/demo_usm_entropy.ipynb
@@ -248,12 +248,12 @@
    "source": [
     "<a id='Section2'></a>\n",
     "# Section 2 Asymptotic Behavior of Renyi Entropy by Natural Log of Kernel Variance\n",
-    "In the original paper, Vinga and Almeida [3](#3) explore the dependence relationship between the entropy measure and the kernel variance, $\\sigma^2$, with the graph of the function $H_2 = H_2(ln\\sigma^2)$ and prove this graph has two linear asymptotes of the forms $H_2 = \\lim_{ln\\sigma^2 \\to +\\infty} H_2(ln\\sigma^2) = m ln\\sigma^2 + b$ and $H_2 = \\lim_{ln\\sigma^2 \\to -\\infty} H_2(ln\\sigma^2) = m' ln\\sigma^2 + b'$. Below are proofs of the equations of these asymptotes for the d-dimensional USM. "
+    "In the original paper, Vinga and Almeida [3](#3) explore the dependence relationship between the entropy measure and the kernel variance, $\\sigma^2$, with the graph of the function $H_2 = H_2(ln\\sigma^2)$ and prove this graph has two linear asymptotes of the forms $H_2^+ = \\lim_{ln\\sigma^2 \\to +\\infty} H_2(ln\\sigma^2) = m ln\\sigma^2 + b$ and $H_2^- = \\lim_{ln\\sigma^2 \\to -\\infty} H_2(ln\\sigma^2) = m' ln\\sigma^2 + b'$. Below are proofs of the equations of these asymptotes for the d-dimensional USM. "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d95607b4",
+   "id": "76df4af8",
    "metadata": {},
    "source": [
     "<a id='Section2.1'></a>\n",
@@ -293,14 +293,14 @@
     "&= \\lim_{\\sigma^2 \\to +\\infty} -1\\left(\\ln\\frac{1}{N^22^d\\pi^{d/2}\\sigma^d}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} + \\ln\\sigma^d\\right)\\\\\n",
     "&= \\lim_{\\sigma^2 \\to +\\infty} -1\\left(\\ln\\frac{\\sigma^d}{N^22^d\\pi^{d/2}\\sigma^d}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right)\\\\\n",
     "&= \\lim_{\\sigma^2 \\to +\\infty} -1\\left(\\ln\\frac{\\sigma^d}{2^d\\pi^{d/2}\\sigma^d} + \\ln\\frac{1}{N^2}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right)\\\\\n",
-    "&= \\lim_{\\sigma^2 \\to +\\infty} -\\ln\\frac{1}{2^d\\pi^{d/2}} - \\ln\\frac{1}{N^2}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} \\\\\n",
-    "&= \\lim_{\\sigma^2 \\to +\\infty} \\ln2^d\\pi^{d/2} - \\ln\\frac{N^2}{N^2} \\\\\n",
-    "&= \\lim_{\\sigma^2 \\to +\\infty} \\ln(2\\pi^{1/2})^d \\\\\n",
+    "&= -\\ln\\frac{1}{2^d\\pi^{d/2}} - \\lim_{\\sigma^2 \\to +\\infty} \\ln\\frac{1}{N^2}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} \\\\\n",
+    "&= \\ln2^d\\pi^{d/2} - \\ln\\frac{N^2}{N^2} \\\\\n",
+    "&= \\ln(2\\pi^{1/2})^d \\\\\n",
     "\\end{align}\n",
     "\\tag{2.1.2}\n",
     "$$\n",
     "\n",
-    "since the $\\lim_{\\sigma^2 \\to +\\infty} e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} = 1$, $\\sum_{i=1}^{N}\\sum_{j=1}^{N}1 = N^2$, and the log1 is zero.\n",
+    "since the $\\lim_{\\sigma^2 \\to +\\infty} e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} = 1$, $\\sum_{i=1}^{N}\\sum_{j=1}^{N}1 = N^2$, and $\\ln(1)=0$.\n",
     "\n",
     "Therefore we determine the equation of the linear asymptote of $H_2 =  H_2(ln\\sigma^2)$ as $\\ln\\sigma^2 \\to +\\infty$ as\n",
     "<a id='Eq2.1.3'></a>\n",
@@ -309,10 +309,113 @@
     "H_2^+ & = \\frac{d}{2}\\ln\\sigma^2 + \\ln(2\\pi^{\\frac{1}{2}})^d \\\\\n",
     "& = d\\ln\\sigma + d\\ln2\\pi^{\\frac{1}{2}} \\\\\n",
     "& = d\\left(\\ln\\sigma + \\ln2\\pi^{\\frac{1}{2}}\\right) \\\\\n",
-    "& = d\\left(\\ln\\sigma2\\pi^{\\frac{1}{2}}\\right) \\\\\n",
+    "& = d\\ln\\sigma2\\pi^{\\frac{1}{2}} \\\\\n",
+    "& = \\ln\\left(2\\sigma\\pi^{\\frac{1}{2}}\\right)^d \\\\\n",
     "\\end{align}\n",
-    "\\tag{2.1.2}\n",
+    "\\tag{2.1.3}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1b429c0",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "source": [
+    "For b, the first simplification comes from factoring out -1 from the sum, the second simplification comes from the product rule of logarithms we multiply $\\sigma^2$ and $\\ln\\frac{1}{N^22^d\\pi^{d/2}\\sigma^d}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}$. The third simplification come again from applying the product rule but this time in splitting into a sum of two different log terms (ie we treat $\\frac{\\sigma^d}{N^22^d\\pi^{d/2}\\sigma^d}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}$ as the product $\\frac{\\sigma^d}{2^d\\pi^{d/2}\\sigma^d} \\times \\frac{1}{N^2}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}$). The fourth simplification comes from applying the rule of cologarithms and the given above."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60518a4e",
+   "metadata": {},
+   "source": [
+    "<a id='Section2.2'></a>\n",
+    "### 2.2 Asymptote for $\\ln\\sigma^2 \\to 0^+$\n",
+    "Because $H_2 = H_2(ln\\sigma^2)$ is a logarithmic equation it is undefined for $\\sigma^2 < 0$. Therefore we do not have to worry about the $\\lim_{\\sigma^2 \\to -\\infty}$ of the equation but only need to solve for $\\lim_{\\sigma^2 \\to 0^+}$.  \n",
+    "\n",
+    "We solve for the coefficients, $m'$ and $b'$, of the asymptote equation $H_2^- = \\lim_{ln\\sigma^2 \\to 0^+} H_2(ln\\sigma^2) = m' ln\\sigma^2 + b'$ using the equations given by Vinga and Almeida [3](#3) $m' = \\lim_{\\sigma^2 \\to 0^+} \\frac{H_2(\\sigma^2)}{\\ln\\sigma^2}$ and $b' = \\lim_{\\sigma^2 \\to 0^+} (H_2(\\sigma^2) - m' \\ln \\sigma^2)$.  \n",
+    "\n",
+    "For $m'$ we begin the same way as for $m$, except using the simplified entropy equation [Eq. 3.1.1](#Eq3.1.1) an alternate form of [Eq. 1.3.1](#Eq1.3.1) which we derive in [Section 3.1](#Section3.1). We then apply the same simplifications applied in the derivation of [Eq. 2.1.1](#Eq2.1.1) and the fact that $\\lim_{x \\to 0^+}\\ln(x) = -\\infty$ and proceed, \n",
+    "<a id='Eq2.2.1'></a>\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "m' & = \\lim_{\\sigma^2 \\to 0^+} \\frac{-\\ln\\frac{1}{N^2(2\\pi^{1/2}\\sigma)^d}\\times\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right]}{\\ln\\sigma^2} \\\\\n",
+    "& = \\frac{d}{2} + \\lim_{\\sigma^2 \\to 0^+} \\frac{\\ln(N^22^d\\pi^{d/2})}{\\ln\\sigma^2} - \\frac{\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right]}{\\ln\\sigma^2} \\\\\n",
+    "& = \\frac{d}{2} - \\lim_{\\sigma^2 \\to 0^+} \\frac{N}{\\ln\\sigma^2} \\\\\n",
+    "& = \\frac{d}{2} \\\\\n",
+    "\\end{align}\n",
+    "\\tag{2.2.1}\n",
+    "$$\n",
+    "\n",
+    "since $\\frac{\\ln(N^22^d\\pi^{d/2})}{\\ln\\sigma^2}$ will tend toward $-0$ as $\\sigma^2 \\to 0^+$ and  $\\lim_{\\sigma^2 \\to 0^+} \\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} = 0$ since $\\lim_{\\sigma^2 \\to 0^+} -\\frac{1}{4\\sigma^2}d_{ij} = -\\infty$.\n",
+    "\n",
+    "For $b'$ we follow the same procedure using [Eq. 3.1.1](#Eq3.1.1) and the simplifications applied for [Eq. 2.1.2](#Eq2.1.2):\n",
+    "<a id='Eq2.2.2'></a>\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "b' & = \\lim_{\\sigma^2 \\to 0^+} -\\ln\\frac{1}{N^2\\left(2\\pi^{1/2}\\sigma\\right)^d}\\times\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right] - \\frac{d}{2}\\ln\\sigma^2 \\\\\n",
+    "& = -\\ln\\frac{1}{2^d\\pi^{d/2}} - \\lim_{\\sigma^2 \\to 0^+} \\ln\\frac{1}{N^2}\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right] \\\\\n",
+    "& = -\\ln\\frac{1}{2^d\\pi^{d/2}} - \\ln\\frac{N}{N^2} \\\\\n",
+    "& = \\ln\\left(2\\pi^{1/2}\\right)^d + \\ln\\frac{N^2}{N} \\\\\n",
+    "& = d\\ln2\\pi^{1/2} + \\ln N \\\\\n",
+    "\\end{align}\n",
+    "\\tag{2.2.2}\n",
+    "$$\n",
+    "\n",
+    "Therefore we determine the equation of the linear asymptote of $H_2 =  H_2(ln\\sigma^2)$ as $\\ln\\sigma^2 \\to 0^+$ as\n",
+    "<a id='Eq2.2.3'></a>\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "H_2^- & = \\frac{d}{2}\\ln\\sigma^2 + d\\ln2\\pi^{1/2} + \\ln N \\\\\n",
+    "& = d\\ln\\sigma + d\\ln2\\pi^{1/2} + \\ln N \\\\\n",
+    "& = d\\left(\\ln\\sigma + \\ln2\\pi^{1/2}\\right) + \\ln N \\\\\n",
+    "& = d\\left(\\ln\\sigma2\\pi^{1/2}\\right) + \\ln N \\\\\n",
+    "& = \\ln\\left(\\sigma2\\pi^{1/2}\\right)^d + \\ln N \\\\\n",
+    "& = \\ln N\\left(2\\sigma\\pi^{1/2}\\right)^d \\\\\n",
+    "\\end{align}\n",
+    "\\tag{2.2.3}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e374e9b5",
+   "metadata": {
+    "tags": [
+     "remove_cell"
+    ]
+   },
+   "source": [
+    "For $b'$ the simplification at step 3 is due to the rule of cologs where a negative log equals the log of the reciprocol of the argument."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0268665c",
+   "metadata": {},
+   "source": [
+    "We can check the validity of these asymptote equations by substituting $d = 4$ we obtain the asymptote equations derived in [3](#3).\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "H_2^+ & = \\ln\\left(2\\sigma\\pi^{\\frac{1}{2}}\\right)^4  \\\\\n",
+    "& = \\ln2^4\\sigma^4\\left(\\pi^{\\frac{1}{2}}\\right)^4  \\\\\n",
+    "2\\ln\\sigma^2 + \\ln16\\pi^2 & = \\ln16\\sigma^4\\pi^{2}  \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{align}\n",
+    "H_2^- & = \\ln N\\left(2\\sigma\\pi^{1/2}\\right)^4 \\\\\n",
+    "2\\ln\\sigma^2 + \\ln16\\pi^2 + \\ln N & = \\ln 16N\\sigma^4\\pi^{2} \\\\\n",
+    "\\end{align}\n",
+    "$$\n",
+    "\n",
+    "Where the left side of the equations are the corresponding graph asyptote equations in [3](#3)."
    ]
   },
   {
@@ -335,7 +438,7 @@
     "In the implementation of [Eq. 1.3.1](#Eq1.3.1) in the function usm_entropy.renyi2usm() we utilize the function pdist() from the module scipy.spatial.distance which calculates the pairwise distance between  \n",
     "Moving the constants outside of the summation and we can then simplify even further due to the fact that all the pairwise distances of the form $d_{ii} = 0$ and therefore $\\sum_{\\substack{i=j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2} \\cdot \\ 0\\right)} = N$ and the fact that for the remainder of the pairwise distances, $d_{ij} = d_{ji}$, and so the sum of the pairwise distances where $i \\neq j$ can be obtained by $2 \\cdot \\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}$.\n",
     "\n",
-    "Finally we obtain the equation for Renyi entropy of a *d*-dimensional USM of *N* sample coordinates where $d_ij$ is the squared Euclidean distance between sample USM coordinates $a_i$ and $a_j$:  \n",
+    "Finally we obtain the equation for Renyi entropy of a *d*-dimensional USM of *N* sample coordinates where $d_{ij}$ is the squared Euclidean distance between sample USM coordinates $a_i$ and $a_j$:  \n",
     "<a id='Eq3.1.1'></a>\n",
     "$$\n",
     "H_2(USM) = -\\ln\\frac{1}{N^2(2\\pi^{1/2}\\sigma)^d}\\times\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right]\n",
