update module demos

--- a/demo_usm_entropy.ipynb
+++ b/demo_usm_entropy.ipynb
@@ -17,8 +17,10 @@
     "    - [Section 1.1](#Section1.1) Renyi Continuous Entropy\n",
     "    - [Section 1.2](#Section1.2) Parzen Window Kernel Density Estimation\n",
     "    - [Section 1.3](#Section1.3) Equation of *d*-dimensional Renyi Entropy of USM\n",
-    "* [Section 2](#Section2) \n",
-    "* [Section 3](#Section3) Demo of usm_entropy module"
+    "* [Section 2](#Section2) Demo of usm_entropy module\n",
+    "    - [Section 2.1](#Section2.1) Simplification of Entropy Equation\n",
+    "* [Section 3](#Section3)\n",
+    "    - [Section 3.1](#Section3.1) "
    ]
   },
   {
@@ -243,11 +245,85 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f5b99ac",
+   "id": "3a76f46d",
    "metadata": {},
    "source": [
     "<a id='Section2'></a>\n",
-    "# Section 2 Asymptotic Behavior of Renyi Entropy by Natural Log of Kernel Variance\n",
+    "# Section 2 Demo of usm_entropy module\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "16fecc45",
+   "metadata": {},
+   "source": [
+    "<a id='Section2.1'></a>\n",
+    "### 2.1 Simplification of Entropy Equation for Python Implementation\n",
+    "\n",
+    "In the implementation of [Eq. 1.3.1](#Eq1.3.1) in the function usm_entropy.renyi2usm() we utilize the function pdist() from the module scipy.spatial.distance which calculates the pairwise distance between  \n",
+    "Moving the constants outside of the summation and we can then simplify even further due to the fact that all the pairwise distances of the form $d_{ii} = 0$ and therefore $\\sum_{\\substack{i=j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2} \\cdot \\ 0\\right)} = N$ and the fact that for the remainder of the pairwise distances, $d_{ij} = d_{ji}$, and so the sum of the pairwise distances where $i \\neq j$ can be obtained by $2 \\cdot \\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}$.\n",
+    "\n",
+    "Finally we obtain the equation for Renyi entropy of a *d*-dimensional USM of *N* sample coordinates where $d_{ij}$ is the squared Euclidean distance between sample USM coordinates $a_i$ and $a_j$:  \n",
+    "<a id='Eq2.1.1'></a>\n",
+    "$$\n",
+    "H_2(USM) = -\\ln\\frac{1}{N^2(2\\pi^{1/2}\\sigma)^d}\\times\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right]\n",
+    "\\tag{2.1.1}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37413c1b",
+   "metadata": {},
+   "source": [
+    "<a id='Section2.2'></a>\n",
+    "### 2.2 usm_entropy.renyi2usm()\n",
+    "Equation [2.1.1](#Eq2.1.1) is implemented by the function renyi2usm() in the usm_entropy.py module. \n",
+    "> renyi2usm(cgr_coords, sig2v, refseq=None, Plot=True, filesave=False, deep_copy=True)  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b0ff5910",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from pathlib import Path\n",
+    "import usm_make\n",
+    "import usm_entropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "87e577bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('C:/Users/Wuestney/Documents/GitHub/pyusm/demo_files')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demo_files = Path.cwd()/ \"demo_files\"\n",
+    "demo_files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f5b99ac",
+   "metadata": {},
+   "source": [
+    "<a id='Section3'></a>\n",
+    "# Section 3 Asymptotic Behavior of Renyi Entropy by Natural Log of Kernel Variance\n",
     "In the original paper, Vinga and Almeida [3](#3) explore the dependence relationship between the entropy measure and the kernel variance, $\\sigma^2$, with the graph of the function $H_2 = H_2(ln\\sigma^2)$ and prove this graph has two linear asymptotes of the forms $H_2^+ = \\lim_{ln\\sigma^2 \\to +\\infty} H_2(ln\\sigma^2) = m ln\\sigma^2 + b$ and $H_2^- = \\lim_{ln\\sigma^2 \\to -\\infty} H_2(ln\\sigma^2) = m' ln\\sigma^2 + b'$. Below are proofs of the equations of these asymptotes for the d-dimensional USM. "
    ]
   },
@@ -256,8 +332,8 @@
    "id": "76df4af8",
    "metadata": {},
    "source": [
-    "<a id='Section2.1'></a>\n",
-    "### 2.1 Asymptote for $\\ln\\sigma^2 \\to +\\infty$\n",
+    "<a id='Section3.1'></a>\n",
+    "### 3.1 Asymptote for $\\ln\\sigma^2 \\to +\\infty$\n",
     "We solve for the coefficients, $m$ and $b$, of the asymptote for $ln\\sigma^2 \\to +\\infty$ using the equations given by Vinga and Almeida [3](#3) $m = \\lim_{\\sigma^2 \\to +\\infty} \\frac{H_2(\\sigma^2)}{\\ln\\sigma^2}$ and $b = \\lim_{\\sigma^2 \\to +\\infty} (H_2(\\sigma^2) - m \\ln \\sigma^2)$. \n",
     "\n",
     "We begin with $m$ and substitute [Eq. 1.3.1](#Eq1.3.1) for $H_2(\\sigma^2)$ in the formula. We then simplify the equation by distributing the exponent *d* in the numerator, splitting the numerator into a sum of three log terms per the product rule, then distributing the negative term across the summation, and transforming the negative log of the fractions into the log of the reciprocals per the rule of cologarithms. \n",
@@ -271,7 +347,7 @@
     "\\end{align}\n",
     "$$\n",
     "From there we can split the larger fraction into a sum of three fractions with common denominator $\\ln\\sigma^2$ and by dealing with each individually we get,\n",
-    "<a id='Eq2.1.1'></a>\n",
+    "<a id='Eq3.1.1'></a>\n",
     "$$\n",
     "\\begin{align}\n",
     "m & = \\lim_{\\sigma^2 \\to +\\infty} \\frac{\\ln(N^22^d\\pi^{d/2})}{\\ln\\sigma^2} + \\frac{\\ln\\sigma^d}{\\ln\\sigma^2} - \\frac{\\ln\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}}{\\ln\\sigma^2} \\\\\n",
@@ -279,14 +355,14 @@
     "& =  \\frac{d}{2} - \\lim_{\\sigma^2 \\to +\\infty}\\frac{\\ln N^2}{\\ln\\sigma^2} \\\\\n",
     "& =  \\frac{d}{2} \n",
     "\\end{align}\n",
-    "\\tag{2.1.1}\n",
+    "\\tag{3.1.1}\n",
     "$$\n",
     "\n",
     "since the limit of the first fraction as $\\sigma^2 \\to +\\infty$ is 0, as the numerator remains constant while the denominator grows infinitely. The second fraction is simplified to $d/2$ per the power rule and becomes a constant independent of $\\sigma^2$. The limit of the final fraction is also 0 since $\\lim_{\\sigma^2 \\to +\\infty} e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} = 1$ and $\\sum_{i=1}^{N}\\sum_{j=1}^{N}1 = N^2$, making the numerator independent of $\\sigma^2$ while the denominator tends toward infinity.\n",
     "\n",
     "\n",
     "And doing the same for $b$ we get \n",
-    "<a id='Eq2.1.2'></a>\n",
+    "<a id='Eq3.1.2'></a>\n",
     "$$\n",
     "\\begin{align}\n",
     "b &= \\lim_{\\sigma^2 \\to +\\infty} -\\ln\\frac{1}{N^22^d\\pi^{d/2}\\sigma^d}\\sum_{i=1}^{N}\\sum_{j=1}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} - \\frac{d}{2}\\ln\\sigma^2 \\\\\n",
@@ -297,13 +373,13 @@
     "&= \\ln2^d\\pi^{d/2} - \\ln\\frac{N^2}{N^2} \\\\\n",
     "&= \\ln(2\\pi^{1/2})^d \\\\\n",
     "\\end{align}\n",
-    "\\tag{2.1.2}\n",
+    "\\tag{3.1.2}\n",
     "$$\n",
     "\n",
     "since the $\\lim_{\\sigma^2 \\to +\\infty} e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} = 1$, $\\sum_{i=1}^{N}\\sum_{j=1}^{N}1 = N^2$, and $\\ln(1)=0$.\n",
     "\n",
     "Therefore we determine the equation of the linear asymptote of $H_2 =  H_2(ln\\sigma^2)$ as $\\ln\\sigma^2 \\to +\\infty$ as\n",
-    "<a id='Eq2.1.3'></a>\n",
+    "<a id='Eq3.1.3'></a>\n",
     "$$\n",
     "\\begin{align}\n",
     "H_2^+ & = \\frac{d}{2}\\ln\\sigma^2 + \\ln(2\\pi^{\\frac{1}{2}})^d \\\\\n",
@@ -312,7 +388,7 @@
     "& = d\\ln\\sigma2\\pi^{\\frac{1}{2}} \\\\\n",
     "& = \\ln\\left(2\\sigma\\pi^{\\frac{1}{2}}\\right)^d \\\\\n",
     "\\end{align}\n",
-    "\\tag{2.1.3}\n",
+    "\\tag{3.1.3}\n",
     "$$"
    ]
   },
@@ -333,14 +409,14 @@
    "id": "60518a4e",
    "metadata": {},
    "source": [
-    "<a id='Section2.2'></a>\n",
-    "### 2.2 Asymptote for $\\ln\\sigma^2 \\to 0^+$\n",
+    "<a id='Section3.2'></a>\n",
+    "### 3.2 Asymptote for $\\ln\\sigma^2 \\to 0^+$\n",
     "Because $H_2 = H_2(ln\\sigma^2)$ is a logarithmic equation it is undefined for $\\sigma^2 < 0$. Therefore we do not have to worry about the $\\lim_{\\sigma^2 \\to -\\infty}$ of the equation but only need to solve for $\\lim_{\\sigma^2 \\to 0^+}$.  \n",
     "\n",
     "We solve for the coefficients, $m'$ and $b'$, of the asymptote equation $H_2^- = \\lim_{ln\\sigma^2 \\to 0^+} H_2(ln\\sigma^2) = m' ln\\sigma^2 + b'$ using the equations given by Vinga and Almeida [3](#3) $m' = \\lim_{\\sigma^2 \\to 0^+} \\frac{H_2(\\sigma^2)}{\\ln\\sigma^2}$ and $b' = \\lim_{\\sigma^2 \\to 0^+} (H_2(\\sigma^2) - m' \\ln \\sigma^2)$.  \n",
     "\n",
-    "For $m'$ we begin the same way as for $m$, except using the simplified entropy equation [Eq. 3.1.1](#Eq3.1.1) an alternate form of [Eq. 1.3.1](#Eq1.3.1) which we derive in [Section 3.1](#Section3.1). We then apply the same simplifications applied in the derivation of [Eq. 2.1.1](#Eq2.1.1) and the fact that $\\lim_{x \\to 0^+}\\ln(x) = -\\infty$ and proceed, \n",
-    "<a id='Eq2.2.1'></a>\n",
+    "For $m'$ we begin the same way as for $m$, except using the simplified entropy equation [Eq. 2.1.1](#Eq2.1.1) an alternate form of [Eq. 1.3.1](#Eq1.3.1) which we derived in [Section 2.1](#Section2.1). We then apply the same simplifications applied in the derivation of [Eq. 3.1.1](#Eq3.1.1) and the fact that $\\lim_{x \\to 0^+}\\ln(x) = -\\infty$ and proceed, \n",
+    "<a id='Eq3.2.1'></a>\n",
     "$$\n",
     "\\begin{align}\n",
     "m' & = \\lim_{\\sigma^2 \\to 0^+} \\frac{-\\ln\\frac{1}{N^2(2\\pi^{1/2}\\sigma)^d}\\times\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right]}{\\ln\\sigma^2} \\\\\n",
@@ -348,13 +424,13 @@
     "& = \\frac{d}{2} - \\lim_{\\sigma^2 \\to 0^+} \\frac{N}{\\ln\\sigma^2} \\\\\n",
     "& = \\frac{d}{2} \\\\\n",
     "\\end{align}\n",
-    "\\tag{2.2.1}\n",
+    "\\tag{3.2.1}\n",
     "$$\n",
     "\n",
     "since $\\frac{\\ln(N^22^d\\pi^{d/2})}{\\ln\\sigma^2}$ will tend toward $-0$ as $\\sigma^2 \\to 0^+$ and  $\\lim_{\\sigma^2 \\to 0^+} \\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)} = 0$ since $\\lim_{\\sigma^2 \\to 0^+} -\\frac{1}{4\\sigma^2}d_{ij} = -\\infty$.\n",
     "\n",
-    "For $b'$ we follow the same procedure using [Eq. 3.1.1](#Eq3.1.1) and the simplifications applied for [Eq. 2.1.2](#Eq2.1.2):\n",
-    "<a id='Eq2.2.2'></a>\n",
+    "For $b'$ we follow the same procedure using [Eq. 2.1.1](#Eq2.1.1) and the simplifications applied for [Eq. 3.1.2](#Eq3.1.2):\n",
+    "<a id='Eq3.2.2'></a>\n",
     "$$\n",
     "\\begin{align}\n",
     "b' & = \\lim_{\\sigma^2 \\to 0^+} -\\ln\\frac{1}{N^2\\left(2\\pi^{1/2}\\sigma\\right)^d}\\times\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right] - \\frac{d}{2}\\ln\\sigma^2 \\\\\n",
@@ -363,11 +439,11 @@
     "& = \\ln\\left(2\\pi^{1/2}\\right)^d + \\ln\\frac{N^2}{N} \\\\\n",
     "& = d\\ln2\\pi^{1/2} + \\ln N \\\\\n",
     "\\end{align}\n",
-    "\\tag{2.2.2}\n",
+    "\\tag{3.2.2}\n",
     "$$\n",
     "\n",
     "Therefore we determine the equation of the linear asymptote of $H_2 =  H_2(ln\\sigma^2)$ as $\\ln\\sigma^2 \\to 0^+$ as\n",
-    "<a id='Eq2.2.3'></a>\n",
+    "<a id='Eq3.2.3'></a>\n",
     "$$\n",
     "\\begin{align}\n",
     "H_2^- & = \\frac{d}{2}\\ln\\sigma^2 + d\\ln2\\pi^{1/2} + \\ln N \\\\\n",
@@ -377,7 +453,7 @@
     "& = \\ln\\left(\\sigma2\\pi^{1/2}\\right)^d + \\ln N \\\\\n",
     "& = \\ln N\\left(2\\sigma\\pi^{1/2}\\right)^d \\\\\n",
     "\\end{align}\n",
-    "\\tag{2.2.3}\n",
+    "\\tag{3.2.3}\n",
     "$$"
    ]
   },
@@ -416,58 +492,6 @@
     "$$\n",
     "\n",
     "Where the left side of the equations are the corresponding graph asyptote equations in [3](#3)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "3a76f46d",
-   "metadata": {},
-   "source": [
-    "<a id='Section3'></a>\n",
-    "# Section 3 Demo of usm_entropy module\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "16fecc45",
-   "metadata": {},
-   "source": [
-    "<a id='Section3.1'></a>\n",
-    "### 3.1 Simplification of Entropy Equation for Python Implementation\n",
-    "\n",
-    "In the implementation of [Eq. 1.3.1](#Eq1.3.1) in the function usm_entropy.renyi2usm() we utilize the function pdist() from the module scipy.spatial.distance which calculates the pairwise distance between  \n",
-    "Moving the constants outside of the summation and we can then simplify even further due to the fact that all the pairwise distances of the form $d_{ii} = 0$ and therefore $\\sum_{\\substack{i=j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2} \\cdot \\ 0\\right)} = N$ and the fact that for the remainder of the pairwise distances, $d_{ij} = d_{ji}$, and so the sum of the pairwise distances where $i \\neq j$ can be obtained by $2 \\cdot \\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}$.\n",
-    "\n",
-    "Finally we obtain the equation for Renyi entropy of a *d*-dimensional USM of *N* sample coordinates where $d_{ij}$ is the squared Euclidean distance between sample USM coordinates $a_i$ and $a_j$:  \n",
-    "<a id='Eq3.1.1'></a>\n",
-    "$$\n",
-    "H_2(USM) = -\\ln\\frac{1}{N^2(2\\pi^{1/2}\\sigma)^d}\\times\\left[N + 2 \\cdot\\sum_{\\substack{i<j \\\\ i,j = 1}}^{N}e^{\\left(-\\frac{1}{4\\sigma^2}d_{ij}\\right)}\\right]\n",
-    "\\tag{3.1.1}\n",
-    "$$\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0ff5910",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from pathlib import Path\n",
-    "import usm_make\n",
-    "import usm_entropy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87e577bf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "demo_files = Path.cwd()/ \"demo_files\"\n",
-    "demo_files"
    ]
   },
   {
