--- a/doc/demo_usm_entropy.ipynb
+++ b/doc/demo_usm_entropy.ipynb
@@ -286,13 +286,84 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "b0ff5910",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'usm_make'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-8545396042a9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mpathlib\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mPath\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0musm_make\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0musm_entropy\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'usm_make'"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from pathlib import Path\n",
     "import usm_make\n",
     "import usm_entropy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "3d2d0232",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': array([1, 2]), 'b': array([3, 4]), 'c': array([5, 6])}\n",
+      "(array([1, 2]), array([3, 4]), array([5, 6]))\n",
+      "(1, 3, 5) (2, 4, 6)\n",
+      "col stack [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]]\n",
+      "np.array [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]] (3, 2)\n",
+      "dict_values([array([1, 2]), array([3, 4]), array([5, 6])])\n",
+      "[array([1, 2]), array([3, 4]), array([5, 6])]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [5, 6]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = ['a', 'b', 'c']\n",
+    "V = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "#V = np.array([[1,0,0], [0,1,0], [0,0,1]])\n",
+    "coords = dict(zip(A, V))\n",
+    "print(coords)\n",
+    "a, vrts = zip(*coords.items())\n",
+    "print(vrts)\n",
+    "x, y = zip(*vrts)\n",
+    "print(x, y)\n",
+    "print(\"col stack\", np.column_stack((x, y)))\n",
+    "c = np.array(vrts)\n",
+    "print(\"np.array\", c, c.shape)\n",
+    "d = np.identity(3)\n",
+    "vrts = coords.values()\n",
+    "print(vrts)\n",
+    "print(list(c))\n",
+    "#ix = [:, :]\n",
+    "c[:]"
    ]
   },
   {
